# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.


[metadata]
name = webank-api-server
version = 0.0.1

[versioneer]
VCS = git
style = pep440-ricequant
versionfile_source = webank_api_server/_version.py
versionfile_build = webank_api_server/_version.py
tag_prefix =
parentdir_prefix = webank_api_server

